Better respect of Java 9 specifications