@@ -188,7 +188,7 @@ public class AgentFrame extends JFrame {
 	static void killAgent(final AbstractAgent agent, int timeOutSeconds) {// TODO move that
 		if (agent.isAlive()) {
 			agent.sendMessage(LocalCommunity.Groups.SYSTEM, Organization.GROUP_MANAGER_ROLE,
-					new KernelMessage(KernelAction.KILL_AGENT, agent, new Integer(timeOutSeconds)));
+					new KernelMessage(KernelAction.KILL_AGENT, agent, Integer.valueOf(timeOutSeconds)));
 		}
 	}
 
