@@ -54,7 +54,7 @@ public class XMLFailureTestAgent extends AbstractAgent {
 	 */
 	private static final long serialVersionUID = 1L;
 	private int speed = 0;
-	private Integer i = new Integer(10);
+	private Integer i = Integer.valueOf(10);
 	private String s = "t";
 
 	@Override
